until travel agent login

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -7,7 +7,7 @@
 
     <div class="offcanvas__widget">
         <ul class="menu__class">
-            <li><a routerLink="/home">Home</a></li>
+            <li><a routerLink="">Home</a></li>
             <li><a routerLink="/about">About</a></li>    
             <li><a routerLink="/hotels">Hotels</a></li>
             <li><a routerLink="/member">Become a Member</a></li>
