--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -57,7 +57,16 @@
                <p >{{this.errorMsg}}</p>
              </div>
            }
+           <div class="row travel-categories">  
+            <div class="col category-item">   
+              <a routerLink="/TravelAgent" target="_blank">Travel Agent <span class="arrow">></span></a>
+            </div>
+            <div class="col category-item">
+              <a routerLink="/corporate" target="_blank">Corporate  <span class="arrow">></span></a>
+             </div>
+             </div>
         </div>
+       
       </div>
 </section>
 
