--- a/src/app/views/cancellations/cancellations.component.html
+++ b/src/app/views/cancellations/cancellations.component.html
@@ -12,7 +12,7 @@
           <div class="col-md-3">
             <div class="hotel-img">
               <!-- Display only the first image from the room_images array -->
-              <img [src]="'https://cocoalabs.in/Cubino/storage/app/public/' + hotel.room.hotel.image" alt="Hotel Image" class="img-fluid" />
+              <img [src]="'https://cocoalabs.in/Cubino/storage/app/public/' + getFirstRoomImage(hotel.room.room_images)" alt="Room Image">
             </div>
           </div>
           <div class="col-md-7">
