--- a/src/app/views/list-property/list-property.component.html
+++ b/src/app/views/list-property/list-property.component.html
@@ -4,21 +4,73 @@
       
       <h2>Get Associated with Cubino</h2>
       <hr class="popup-divider" />
-      <form onsubmit="handleFormSubmit(event)">
-        <input
-          type="text"
-          id="name"
-          placeholder="Enter Name"
-          required
-        />
-        <input
-          type="tel"
-          id="phone"
-          placeholder=" Enter Phone number "
-          required
-        />
-        <button type="submit" class="submit-btn">Request a Call</button>
+      <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
+        <!-- Name Field -->
+        <div class="form-group">
+          <input
+            type="text"
+            formControlName="name"
+            placeholder="Enter Name"
+            class="form-control"
+          />
+          <!-- Error messages for name -->
+          <div *ngIf="submitted && f.name.errors" class="error">
+            <div *ngIf="f.name.errors.required">Name is required.</div>
+            <div *ngIf="f.name.errors.minlength">
+              Name must be at least {{ f.name.errors.minlength.requiredLength }} characters long.
+            </div>
+          </div>
+        </div>
+      
+        <!-- Phone Field with Country Code Dropdown -->
+        <div class="form-group phone-group">
+          <select formControlName="selectedCountryCode" class="form-control phone-input">
+            <option *ngFor="let country of countries" [value]="country.code">
+              {{ country.name }} ({{ country.code }})
+            </option>
+          </select>
+          <input
+            type="tel"
+            formControlName="phone_number"
+            placeholder="Enter Phone number"
+            class="form-control phone-input"
+          />
+          <!-- Error messages for phone -->
+          <div *ngIf="submitted && f.phone_number.errors" class="error">
+            <div *ngIf="f.phone_number.errors.required">Phone number is required.</div>
+            <div *ngIf="f.phone_number.errors.pattern">Phone number must be 10 digits long.</div>
+          </div>
+        </div>
+      
+        <!-- Email Field -->
+        <div class="form-group">
+          <input
+            type="email"
+            formControlName="email"
+            placeholder="Enter Email"
+            class="form-control"
+          />
+          <!-- Error messages for email -->
+          <div *ngIf="submitted && f.email.errors" class="error">
+            <div *ngIf="f.email.errors.required">Email is required.</div>
+            <div *ngIf="f.email.errors.email">Please enter a valid email address.</div>
+          </div>
+        </div>
+      
+        <button type="submit" class="submit-btn">Submit</button>
       </form>
+      
+      @if (this.msg) {
+        <div  class="alert alert-success" role="alert">
+           <p >{{this.msg}}</p>
+         </div>
+       }
+       @if (this.errorMsg){
+         <div class="alert alert-danger" role="alert">
+           <p >{{this.errorMsg}}</p>
+         </div>
+       }
+      
     </div>
   </div>
   <app-footer></app-footer>
