--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -83,11 +83,11 @@
     
   </form>
   <div class="row travel-categories">  
-    <div class="col category-item">   
-      <a routerLink="/TravelAgent" target="_blank">Travel Agent <span class="arrow">></span></a>
+    <div class="col category-item" routerLink="/TravelAgent">   
+      <a  target="_blank">Travel Agent <span class="arrow">></span></a>
     </div>
     <div class="col category-item">
-      <a routerLink="/TravelAgent" target="_blank">Corporate  <span class="arrow">></span></a>
+      <a routerLink="/corporate" target="_blank">Corporate  <span class="arrow">></span></a>
      </div>
   </div>
   
